# Legal_AI_Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260710_0001_contract_review_phase0.py  20260714_0002_case_analysis_history.py
backend/app/: README.md  __init__.py  main.py
backend/app/api/: errors.py  health.py
backend/app/core/: config.py  logging.py
backend/app/db/: models.py  session.py
backend/app/repositories/: __init__.py  case_analysis.py  contract_review.py
backend/app/schemas/: analysis.py  case_analysis.py  contract_background.py  contract_review.py
backend/app/services/: __init__.py  analysis_common.py  (+18 more)
backend/tests/: test_analysis_api.py  test_analysis_history_api.py  test_analysis_history_services.py  test_analysis_services.py  test_backend_module_boundaries.py  test_case_analysis_api.py  test_case_analysis_document.py  test_case_analysis_document_form.py  test_case_analysis_evidence.py  test_case_analysis_graph.py  test_case_analysis_persistence.py  test_contract_background_api.py  test_contract_background_service.py  test_contract_review_documents.py  test_contract_review_graph.py  test_contract_review_pdf.py  test_contract_review_pdf_form.py  test_contract_review_persistence.py  test_contract_review_report_api.py  test_contract_review_report_schema.py  test_contract_review_repository.py  test_contract_review_workflow_document.py  test_contract_type_skills.py  test_health.py  test_logging.py  test_mineru_parser.py
(+137 files in other folders)
