[project]
name = "legal-ai-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the Legal AI Agent application."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiomysql>=0.2.0",
  "alembic>=1.14.0",
  "deepagents>=0.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "jinja2>=3.1.0",
  "langchain>=0.3.0",
  "langchain-openai>=1.0.0",
  "langgraph>=0.2.0",
  "minio>=7.2.0",
  "neo4j>=5.28.2,<6.0.0",
  "openai>=1.60.0",
  "pydantic-settings>=2.7.0",
  "pymilvus>=2.5.0",
  "pymongo>=4.11.0",
  "python-docx>=1.2.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.20",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
